@@ -1884,10 +1884,12 @@ func_all_modules ()
   func_module exitfail
   func_module c-stack
   func_module error
+  func_module extensions
   func_module fatal
   func_module getloadavg
   func_module getpagesize
   func_module getusershell
+  func_module gnu-source
   func_module physmem
   func_module posixver
   func_module quotearg
