@@ -7,6 +7,7 @@ m4/st_mtim.m4
 m4/timespec.m4
 
 Depends-on:
+extensions
 
 configure.ac:
 gl_TIMESPEC
